--- a/src/main/webapp/WEB-INF/views/thymeleaf/misAlimentos.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/misAlimentos.html
@@ -58,7 +58,7 @@
                                 <span th:text="${colacion.alimentos.nombre}"></span> </a> -
                             <span th:text="'Cantidad consumida: ' + ${colacion.cantidad}"></span> -
                             <span th:text="'Calorias: ' + ${colacion.alimentos.energia}"></span>
-                            <a th:href="@{/misAlimentos/eliminarAlimento/{idAlimento}/{tipoColacion}/{fecha}(idAlimento=${colacion.alimentos.id},tipoColacion=${colacion.tipo},fecha=${fecha})}" class="btn btn-danger eliminarAlimento" onclick="confirmDelete('${colacion.alimentos.id}', '${colacion.tipo}', '${fecha}')">x</a>                        </li>
+                            <a th:href="@{/misAlimentos/eliminarAlimento/{idAlimento}/{tipoColacion}/{fecha}(idAlimento=${colacion.alimentos.id},tipoColacion=${colacion.tipo},fecha=${fecha})}" class="btn btn-danger eliminarAlimento" onclick="return confirmDelete()">x</a>
                     </ul>
                 </div>
             </div>
@@ -68,11 +68,9 @@
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
         <script>
-        function confirmDelete(idAlimento, tipoColacion, fecha) {
-            if (confirm('Estas seguro de querer eliminar el alimento??')) {
-                window.location.href = '/misAlimentos/eliminarAlimento/' + idAlimento + '/' + tipoColacion + '/' + fecha;
+            function confirmDelete() {
+                return confirm('¿Estás seguro de que quieres eliminar este alimento?');
             }
-        }
     </script>
 </body>
 </html>
